--- a/src/app/pages/workflows/workflows.component.html
+++ b/src/app/pages/workflows/workflows.component.html
@@ -452,4 +452,7 @@
 <div>
   <app-list></app-list>
 </div>
-<app-add-workflow-form></app-add-workflow-form>
+
+<div>
+  <app-add-workflow-form></app-add-workflow-form>
+</div>
