--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -39,7 +39,7 @@
       visionneuse
       <ngx-doc-viewer
           [url]="docPath"
-          viewer="office"
+          viewer="pdf"
           style="width:100%;height:90vh;"
         ></ngx-doc-viewer>
       <!-- <ngx-extended-pdf-viewer [src]="docPath">
