--- a/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
+++ b/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
@@ -68,10 +68,9 @@
 
       <!-- modal button -->
       <input
-        type="button"
         id="add-user-button"
-        class="btn btn-success"
-        placeholder="Selectionner"
+        class="btn btn-success "
+        placeholder="Associer"
       />
       <!-- modal button -->
       <!-- modal -->
