--- a/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
+++ b/src/app/pages/workflows/add-workflow-form/add-workflow-form.component.html
@@ -69,14 +69,14 @@
       <!-- modal button -->
       <!-- (click)="openLg(content)" -->
       <button
-      (click)="openModal()"
+       (click)="openModal()"
         class="btn btn-success"
       >
         Associer
       </button>
       <!-- modal button -->
       <!-- modal -->
-      <app-modal-associate-user></app-modal-associate-user>  
+      <!-- <app-modal-associate-user></app-modal-associate-user>   -->
       <!-- <div
        
         class="col-lg"
