--- a/src/app/pages/documents/document-indexation/document-indexation.component.html
+++ b/src/app/pages/documents/document-indexation/document-indexation.component.html
@@ -1,4 +1,4 @@
-<div class="container-fuild">
+<!-- <div class="container-fuild">
 
     <form
       *ngIf="display == true && displayInnerFolder == false"
@@ -60,4 +60,4 @@
       
       <button class="btn btn-primary col" type="submit">enregistrer</button>
     </form>
-  </div>
+  </div> -->
